--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,10 @@
       "es2018",
       "dom"
     ],
+    "noImplicitAny": false,
     "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "enableI18nLegacyMessageIdFormat": false
   }
 }
